[package]
name = "ranvil"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
dirs = "5.0.1"
flate2 = "1.0.35"
once_cell = "1.20.2"
regex = "1.11.1"
rnbt = { version = "0.1.0", path = "../rnbt" }
serde = { version = "1.0.217", features = ["derive"] }
#serde_nbt = { version = "0.1.0", path = "../serde_nbt" }
